--- a/vc8_0/MediaImageServices.vcproj
+++ b/vc8_0/MediaImageServices.vcproj
@@ -22,6 +22,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
 			ConfigurationType="2"
+			UseOfATL="1"
 			CharacterSet="1"
 			>
 			<Tool
@@ -75,10 +76,9 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
-				AdditionalDependencies="strmiids.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
+				AdditionalDependencies="strmiids.lib"
 				OutputFile="$(OutDir)$(ProjectName).dll"
 				GenerateManifest="false"
-				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				ModuleDefinitionFile="&quot;$(SolutionDir)..\plugins\$(ProjectName)\$(ProjectName).def&quot;"
 				GenerateDebugInformation="true"
 			/>
@@ -112,6 +112,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
 			ConfigurationType="2"
+			UseOfATL="1"
 			CharacterSet="1"
 			>
 			<Tool
@@ -201,7 +202,6 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
 			ConfigurationType="2"
-			UseOfMFC="2"
 			UseOfATL="2"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -254,9 +254,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
-				AdditionalDependencies="strmiids.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
+				AdditionalDependencies="strmiids.lib"
 				OutputFile="$(OutDir)$(ProjectName).dll"
-				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				ModuleDefinitionFile="&quot;$(SolutionDir)..\plugins\$(ProjectName)\$(ProjectName).def&quot;"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -292,7 +291,6 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
 			ConfigurationType="2"
-			UseOfMFC="2"
 			UseOfATL="2"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
