--- a/vc8_0/SkinScanSKS.vcproj
+++ b/vc8_0/SkinScanSKS.vcproj
@@ -22,6 +22,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
 			ConfigurationType="2"
+			UseOfATL="1"
 			CharacterSet="1"
 			>
 			<Tool
@@ -78,10 +79,8 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
-				AdditionalDependencies="unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
 				OutputFile="$(OutDir)$(ProjectName).dll"
 				GenerateManifest="false"
-				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				ModuleDefinitionFile="&quot;$(SolutionDir)..\plugins\$(ProjectName)\$(ProjectName).def&quot;"
 				GenerateDebugInformation="true"
 			/>
@@ -115,6 +114,7 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
 			ConfigurationType="2"
+			UseOfATL="1"
 			CharacterSet="1"
 			>
 			<Tool
@@ -206,7 +206,6 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
 			ConfigurationType="2"
-			UseOfMFC="2"
 			UseOfATL="2"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
@@ -262,9 +261,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				RegisterOutput="true"
-				AdditionalDependencies="unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
 				OutputFile="$(OutDir)$(ProjectName).dll"
-				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				ModuleDefinitionFile="&quot;$(SolutionDir)..\plugins\$(ProjectName)\$(ProjectName).def&quot;"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
@@ -300,7 +297,6 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)$(PlatformName)\plugins\"
 			IntermediateDirectory="$(OutDir)$(ProjectName)"
 			ConfigurationType="2"
-			UseOfMFC="2"
 			UseOfATL="2"
 			CharacterSet="1"
 			WholeProgramOptimization="1"
