--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -2346,18 +2346,24 @@ BEGIN
                     WS_EX_TRANSPARENT
 END
 
-IDD_CODEPAGES DIALOGEX 0, 0, 186, 70
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
-    WS_SYSMENU
+IDD_CODEPAGES DIALOGEX 0, 0, 186, 187
+STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Metadata Localisation"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,39,49,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,100,49,50,14
     LTEXT           "Please select the method of re-encoding:",IDC_STATIC,7,
                     7,172,18
     COMBOBOX        IDC_CODEPAGES,7,26,172,141,CBS_DROPDOWNLIST | WS_VSCROLL | 
                     WS_TABSTOP
+    GROUPBOX        "Preview:",IDC_STATIC,7,45,172,114
+    CONTROL         "",IDC_METHOD1,"Button",BS_AUTORADIOBUTTON | WS_GROUP,15,
+                    62,13,10,WS_EX_TRANSPARENT
+    CONTROL         "",IDC_METHOD2,"Button",BS_AUTORADIOBUTTON,15,109,13,8,
+                    WS_EX_TRANSPARENT
+    LTEXT           "Static",IDC_PREVIEW1,31,62,141,41,NOT WS_GROUP
+    LTEXT           "Static",IDC_PREVIEW2,31,109,141,41,NOT WS_GROUP
+    DEFPUSHBUTTON   "OK",IDOK,39,166,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,100,166,50,14
 END
 
 IDD_SETTINGS_IRC DIALOGEX 0, 0, 282, 220
@@ -3172,7 +3178,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 179
         TOPMARGIN, 7
-        BOTTOMMARGIN, 63
+        BOTTOMMARGIN, 180
     END
 
     IDD_TORRENT_GENERAL, DIALOG
