Removed browse information generation, to speedup compiling
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7006 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/plugins/7ZipBuilder/7ZipBuilder_9.vcproj
+++ b/plugins/7ZipBuilder/7ZipBuilder_9.vcproj
@@ -98,6 +98,7 @@
 			/>
 			<Tool
 				Name="VCBscMakeTool"
+				OutputFile=""
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -191,6 +192,7 @@
 			/>
 			<Tool
 				Name="VCBscMakeTool"
+				OutputFile=""
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -290,6 +292,7 @@
 			/>
 			<Tool
 				Name="VCBscMakeTool"
+				OutputFile=""
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -390,6 +393,7 @@
 			/>
 			<Tool
 				Name="VCBscMakeTool"
+				OutputFile=""
 			/>
 			<Tool
 				Name="VCFxCopTool"
