1) Added new methods to CShareazaFile: GetURL(), GetBitprint() and SplitStringToURLs(). 2) CDownloadBase inherited from CShareazaFile: m_sDisplayName renamed to m_sName and m_sDiskName to m_sPath; managed hashes divided to normal hashes and bool variables. 3) Fixed "%2C-merged URLs" bug. 4) Extended logging of download HTTP headers. 5) Fixed X-Alt and Alt-Location headers (sending and receiving). 6) Added ability to send TTH by download X-Content-URN header.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7064 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_9.vcproj
+++ b/shareaza/Shareaza_9.vcproj
@@ -1006,6 +1006,10 @@
 				>
 			</File>
 			<File
+				RelativePath="ShareazaFile.cpp"
+				>
+			</File>
+			<File
 				RelativePath="ShareazaURL.cpp"
 				>
 			</File>
@@ -3432,6 +3436,10 @@
 			</File>
 			<File
 				RelativePath="StreamArchive.h"
+				>
+			</File>
+			<File
+				RelativePath="ThreadImpl.h"
 				>
 			</File>
 			<File
